--- a/app/app.css
+++ b/app/app.css
@@ -1,5 +1,25 @@
+body{
+  background-color: #9599B1;
+}
+
+h1{
+  text-align: center;
+  font-family: "Stardos Stencil";
+}
+
 h2{
-  font-family: Cursive;
+  font-family: "Stardos Stencil";
+}
+
+div{
+  margin-left: 33%;
+  margin-right: 30%;
+  font-family: "Khula";
+}
+
+ul{
+  border: 2px solid white;
+  border-radius: 5px
 }
 
 .status_true{
